--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ markdown: kramdown
 linkedin: "linhnt31"
 github: "linhnt31"
 # researchgate: "#"
-orcid: ""
+# orcid: ""
 google_analytics: "G-V0TBR5PTVH"
-scopus: ""
-google_scholar: ""
+# scopus: ""
+# google_scholar: ""
 flickr: ""
 
 
