--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### your site title here
 title: Linh Thanh Nguyen
-description: PhD student at Trinity College Dublin, the University of Dublin
+description: PhD student at Trinity College Dublin, The University of Dublin
 
 baseurl: "" #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
