Update skill sets

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 
 # Social media links in footer
 # facebook: "#"
-twitter: "linhnt31"
+twitter: "linhnt_31"
 linkedin: "linhnt31"
 github: "linhnt31"
 # researchgate: "#"
