Update profile and news in Dec 2024

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### your site title here
-title: Linh Thanh Nguyen
+title: Linh Nguyxn
 description: PhD student at Trinity College Dublin, The University of Dublin
 
 baseurl: "" #name of GitHub repository
