--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### your site title here
-title: Linh Nguyxn
-description: PhD student at Trinity College Dublin, The University of Dublin
+title: Thanh Linh Nguyen
+description: PhD candidate at Trinity College Dublin, The University of Dublin
 
 baseurl: "" #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
